???, Jul ??, 2003 - xdebug 1.3.0rc1

= Improved performance greatly by doing lazy folding of variables outside
  trace mode. (Derick)
= Fixed a bug with "quit", if it was used it disabled the extension for the
  current process. (Derick)
+ Added the "full" argument to the remote command "backtrace". When this
  argument is passed, the local variables will be returned to for each frame in
  the stack. (Derick)
+ Implemented xdebug_time_index() which returns the time passed since the
  start of the script. This change also changes the output of the tracing
  functions as the start time will no longer be the first function call, but
  the real start time of the script. (Derick)
+ Implemented the "show-local" command (shows all local variables in the
  current scope including all contents). (Derick)
+ Implemented conditions for breakpoints in the "break" command. (Derick)


Mon, Apr 21, 2003 - xdebug 1.2.0

= Fixed compilation on MacOSX. (Derick)


Tue, Apr 15, 2003 - xdebug 1.2.0rc2

= Fixed handling Windows paths in the debugger. (Derick)
= Fixed getting zvals out of Zend Engine 2. (Derick)


Sun, Apr 6, 2003 - xdebug 1.2.0rc1

+ Added code coverage functions to check which lines and how often they were
  touched during execution. (Derick)
+ Made Xdebug compatible with Zend Engine 2. (Derick)
+ Added dumping of super globals on errors. (Harald Radi)
+ Added XML protocol for the debugger client. (Derick)
= Fixed handling of "continue" (so that it also continues with the script).
  (Derick)
+ Additions to the remote debugger: "eval" (evaluate any PHP code from the
  debugger client). (Derick)
+ Added profiling support to xdebug. This introduces 3 new functions,
  xdebug_start_profiling() that begins profiling process, 
  xdebug_stop_profiling() that ends the profiling process and
  xdebug_dump_function_trace() that dumps the profiling data. (Ilia)
+ Implemented the "kill" (kills the running script) and "delete" (removes