@@ -84,6 +84,9 @@ TBW
       <version>1.3.0rc1</version>
       <date>2003-05-15</date>
       <notes>
++ Added "id" attribute to <var /> elements in responses from the remove
+  debugger when the response method is XML. This makes it possible to
+  distinguish between unique elements by use of recursion for example. (Derick)
 = Improved performance greatly by doing lazy folding of variables outside
   trace mode. (Derick)
 = Fixed a bug with "quit", if it was used it disabled the extension for the
