@@ -1,5 +1,8 @@
 ???, Jul ??, 2003 - xdebug 1.3.0rc1
 
++ Added "id" attribute to <var /> elements in responses from the remove
+  debugger when the response method is XML. This makes it possible to
+  distinguish between unique elements by use of recursion for example. (Derick)
 = Improved performance greatly by doing lazy folding of variables outside
   trace mode. (Derick)
 = Fixed a bug with "quit", if it was used it disabled the extension for the
